tests/rosetta/out/Pascal/arithmetic-geometric-mean.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/arithmetic-geometric-mean.pas
arithmetic-geometric-mean.pas(22,12) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
arithmetic-geometric-mean.pas(26,20) Note: Call to subroutine "operator +(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
arithmetic-geometric-mean.pas(26,20) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
arithmetic-geometric-mean.pas(26,34) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
arithmetic-geometric-mean.pas(26,24) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
arithmetic-geometric-mean.pas(26,34) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
arithmetic-geometric-mean.pas(29,13) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
arithmetic-geometric-mean.pas(42,19) Error: Operator is not overloaded: "Double" div "ShortInt"
arithmetic-geometric-mean.pas(53,31) Error: Operator is not overloaded: "ShortInt" div "Double"
arithmetic-geometric-mean.pas(59) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
