tests/rosetta/out/Pascal/arithmetic-geometric-mean.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:09Z
program ArithmeticGeometricMean;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function abs(x: double): double;
begin
  if (x < 0) then ;
  result := x;
  exit;
end;

function sqrtApprox(x: double): double;
var
  guess: Variant;
  i: integer;
begin
  guess := x;
  i := 0;
  while (i < 20) do
  begin
    guess := guess + x div guess div 2;
    i := i + 1;
  end;
  result := guess;
  exit;
end;

function agm(a: double; g: double): double;
var
  eps: double;
  newA: Variant;
  newG: Variant;
begin
  eps := 1e-14;
  while (Abs(a - g) > Abs(a) * eps) do
  begin
    newA := a + g div 2;
    newG := sqrtApprox(a * g);
    a := newA;
    g := newG;
  end;
  result := a;
  exit;
end;

function main(): integer;
begin
  writeln(FloatToStr(agm(1, 1 div sqrtApprox(2))));
end;

begin
  main();
end.
